Fix overflow and padding issues

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ form {
 input[type="color"] {
   appearance: none;
   background: none;
-  border: 20em;
   border-color: transparent;
   padding: 0;
   cursor: pointer;
@@ -143,6 +142,7 @@ input[type="color"] {
     border-radius: 5px;
     background-color: #FFF;
     color: #374151;
+    margin-left: 2em
   }
   
   .submit-button {
