--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* display: grid;
-  place-items: center; */
+  display: grid;
+  place-items: center;
   min-height: 100vh;
   background-color: #1C1C1C;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 code {
